fixed padding on small breakpoint

--- a/assets/css/_clpw.scss
+++ b/assets/css/_clpw.scss
@@ -28,12 +28,12 @@
 
 .pair {
     background-color: black;
-	padding: 36.6px 0;
+	padding: 31.8px 0;
 
         .price-big{
          	line-height: 1.2;
 			font-weight: 700;
-			font-size: 1.5rem;
+			font-size: 2rem;
      }
 }
 
