--- a/assets/css/_mixins.scss
+++ b/assets/css/_mixins.scss
@@ -11,7 +11,8 @@
 }
 
 @include media-breakpoint-down(md){
-    .pair{
+    .crypto-pairs .col-sm-6 .pair{
+        padding: 39px 0px;
         height: 100%;
     }
 }
